--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -167,7 +167,7 @@ post_meta:
 
 # Please see doc for more details: https://jerryc.me/posts/21cfbf15/#字数统计
 wordcount:
-  enable: false
+  enable: true
 
 toc:
   enable: true
@@ -302,7 +302,7 @@ Flink:
 
 runtimeshow:
   enable: true
-  start_date: 28/7/2019 00:00:00
+  start_date: 7/28/2019 00:00:00
 
 
 nightshift:
