--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -167,7 +167,7 @@ post_meta:
 
 # Please see doc for more details: https://jerryc.me/posts/21cfbf15/#字数统计
 wordcount:
-  enable: true
+  enable: false
 
 toc:
   enable: true
