--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -19,7 +19,7 @@ menu:
   时间轴: /archives/||fa fa-archive
   标签: /tags/||fa fa-tags
   分类: /categories/||fa fa-folder-open
-  留言板: /messageboard/||fa fa-coffee
+  留言板: /guestbook/||fa fa-coffee
   友链: /link/||fa fa-link
   关于: /about/||fa fa-heart
   相册: /gallery/||fa fa-camera
