--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.3",
+    "hexo-tag-aplayer": "^3.0.4"
+  },
+  "devDependencies": {
+    "hexo-browsersync": "^0.3.0",
     "hexo-server": "^0.3.3"
   }
 }
