--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -92,7 +92,7 @@ mathjax:
 # KaTeX
 # ---------------
 katex:
-  enable: false
+  enable: true
   cdn:
     css: https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css  
   hide_scrollbar: true
