--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -86,7 +86,7 @@ local_search:
 # Please see doc for more details: https://jerryc.me/posts/21cfbf15/#MathJax
 # ---------------
 mathjax:
-  enable: true
+  enable: false
   cdn: https://cdn.jsdelivr.net/npm/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
 # KaTeX
