--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -358,9 +358,10 @@ Open_Graph_meta: true
 readmode:
   enable: true
 
+#字体设置
 font:
   enable: true
-  font-family: Segoe UI, Roboto, PingFang SC, Hiragino Sans GB,"Microsoft JhengHei", "MicrMicrosoft YaHei", Helvetica Neue, Helvetica, Arial, sans-serif
+  font-family: Roboto, PingFang SC, Hiragino Sans GB,"Microsoft JhengHei", "MicrMicrosoft YaHei", Helvetica Neue, Helvetica, Arial, sans-serif
   code-font: consolas, Menlo, "PingFang SC", "Microsoft JhengHei","Microsoft YaHei", monospace, Helvetica Neue For Number
 
 
