--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ source/_posts/FutureMe.md
 source/_posts/Drools.md
 source/_posts/AboutDeath.md
 source/_posts/Prose.md
+source/_posts/PoemsToLoved.md
