--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 茵尼斯弗利岛
 subtitle: 在林间听群蜂高唱，独居于幽处，于是我将会有安宁，安宁慢慢来到。
-description: 这里是一个码农和诗歌爱好者的个人博客，记录平时的思想、情感、生活总结和学习成果。
+description: 愿化江水，与君重逢。
 keywords: 
 author: W.B Yeats
 language: zh-CN
