--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 茵尼斯弗利岛
 subtitle: 在林间听群蜂高唱，独居于幽处，于是我将会有安宁，安宁慢慢来到。
-description: 愿化江水，与君重逢。
+description: 天地寂寥山雨歇，几生修得到梅花？
 keywords: 
 author: W.B Yeats
 language: zh-CN
