--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ source/_posts/Drools.md
 source/_posts/AboutDeath.md
 source/_posts/Prose.md
 source/_posts/PoemsToLoved.md
+source/_posts/Village.md
+source/_posts/Death.md
