--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ source/_posts/Prose.md
 source/_posts/PoemsToLoved.md
 source/_posts/Village.md
 source/_posts/Death.md
+source/_posts/RemoveAllApps.md
