--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ source/_posts/PoemsToLoved.md
 source/_posts/Village.md
 source/_posts/Death.md
 source/_posts/RemoveAllApps.md
+source/_posts/Neruda.md
+source/_posts/FutureMe.md
