--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ source/_posts/FutureMe.md
 source/_posts/RemoveAllApps.md
 source/_posts/RemoveAllApps.md
 source/_posts/RemoveAllApps.md
+source/_posts/Town.md
