--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ source/_posts/Prose.md
 source/_posts/PoemsToLoved.md
 source/_posts/Village.md
 source/_posts/Death.md
-
+source/_posts/Street.md
 source/_posts/FutureMe.md
 source/_posts/RemoveAllApps.md
 source/_posts/RemoveAllApps.md
