--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,5 @@ source/_posts/Death.md
 source/_posts/Street.md
 source/_posts/FutureMe.md
 source/_posts/RemoveAllApps.md
-source/_posts/RemoveAllApps.md
-source/_posts/RemoveAllApps.md
-source/_posts/Town.md
+source/_posts/Whitman.md
+
