--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,7 @@ source/_posts/Death.md
 source/_posts/Street.md
 source/_posts/FutureMe.md
 source/_posts/RemoveAllApps.md
+source/_posts/YuXiuHua.md
 
+source/_posts/IfICouldOnly.md
+source/_posts/ModernChina.md
