--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ source/_posts/RemoveAllApps.md
 source/_posts/YuXiuHua.md
 source/_posts/IfICouldOnly.md
 source/_posts/ModernChina.md
+source/_posts/Salome.md
