--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "[markdown]": {
         "editor.wordWrap": "on",
-        "editor.quickSuggestions": true,
+        "editor.quickSuggestions": {
+            "comments": "on",
+            "strings": "on",
+            "other": "on"
+        },
         "editor.suggestSelection": "first",
-        "editor.tabCompletion": true,
+        "editor.tabCompletion": "onlySnippets",
     },
     "git.ignoreLimitWarning": true
 }
